--- a/src/app/routes/home-page/home-page.component.html
+++ b/src/app/routes/home-page/home-page.component.html
@@ -1,1 +1,9 @@
-<h2>Home</h2>
+<div class="container">
+   <login *ngIf="!userService.isLogged"></login>
+   
+   <dashboard *ngIf="userService.isLogged"></dashboard>
+</div>
+
+<footer>
+   <app-footer></app-footer>
+</footer>
