--- a/src/app/components/char/char.component.html
+++ b/src/app/components/char/char.component.html
@@ -4,7 +4,7 @@
    />
    
    <div class="name-container">
-      <img width="200px" class="ribbon" src="../../../assets/resources/hand-drawn-ribbon-banner.png" alt="">
+      <img width="200px" class="ribbon" src="assets/resources/hand-drawn-ribbon-banner.png" alt="">
       <div class="name" [ngStyle]="char.ancestry ? {} : {'bottom':'25px'}">
          <h2>{{char?.name | translate}}</h2>
          <h3 *ngIf="char?.hogwartsStudent" class="role">Estudiante</h3>
