--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-container" [ngClass]="fadeClass">
    <div class="modal pergamine">
-      <img src="../../../assets/resources/howler.png"
+      <img src="assets/resources/howler.png"
          class="howler" *ngIf="type!='character'">
       <div class="modal-message" *ngIf="type == 'alert'">
          <p class="msg">Inicia Sesión para acceder a esta sección.</p>
