--- a/src/app/routes/page-not-found/page-not-found.component.html
+++ b/src/app/routes/page-not-found/page-not-found.component.html
@@ -9,7 +9,7 @@
       <p>Te has adentrado en el Bosque Prohibido y te has perdido.</p>
       <p>Usa el Traslador de abajo para volver al Inicio.</p>
       <button class="portkey" routerLink="/home">
-         <img src="../../../assets/resources/traslador.webp">
+         <img src="assets/resources/traslador.webp">
       </button>
    </div>
 </div>
