--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,10 +2,11 @@
    <img src="assets/resources/Remembrall.png" width="100px"
    (click)="toggleFooter()">
    <h3 class="footer-heading" (click)="toggleFooter()">
-      Users de prueba
+      Usuarios predefinidos
    </h3>
 </div>
 <div class="footer-content" [ngClass]="show ? 'show-ftr' : ''">
+   <h3>Usuarios predefinidos</h3>
    <ul class="preset-users">
       <li style="color: #fcc">
          <p>Usuario: godric</p>
