--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -22,6 +22,14 @@
    font-family: 'Quintessential', serif;
 }
 
+.close-menu {
+   background: none;
+   border: none;
+   width: 50px;
+   margin-inline: auto;
+}
+.close-menu svg { fill: #fff; }
+
 @media screen and (max-width:670px) {
    .footer-heading { display: none; }
 }
